Bug 58972 - [softpipe] util/u_tile.c:795:pipe_put_tile_z: Assertion `0' failed.
Summary: [softpipe] util/u_tile.c:795:pipe_put_tile_z: Assertion `0' failed.
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-03 07:13 UTC by Vinson Lee
Modified: 2013-01-04 22:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-01-03 07:13:27 UTC
mesa: 622d96aae499445f12861214354a5b9f63e3a738 (master)

Run piglit copyteximage 1D_ARRAY on softpipe.

$ ./bin/copyteximage 1D_ARRAY -auto
Testing GL_TEXTURE_1D_ARRAY
NOTE: We use glCopyTexSubImage2D to set 4 texture layers at once.
util/u_tile.c:795:pipe_put_tile_z: Assertion `0' failed.
Trace/breakpoint trap (core dumped)

(gdb) bt
#0  0x00007fb579ac836e in _debug_assert_fail (expr=0x7fb579c96a50 "0", file=0x7fb579c96a35 "util/u_tile.c", 
    line=795, function=0x7fb579c96b50 <__FUNCTION__.7838> "pipe_put_tile_z") at util/u_debug.c:278
#1  0x00007fb579aeafd5 in pipe_put_tile_z (pt=0x151b6d0, dst=0x152aa70, x=0, y=0, w=16, h=1, zSrc=0x13c8060)
    at util/u_tile.c:795
#2  0x00007fb5798c8f70 in fallback_copy_texsubimage (ctx=0x132a2f0, strb=0x1377f10, stImage=0x13c86b0, 
    baseFormat=34041, destX=0, destY=0, destZ=0, srcX=0, srcY=3, width=16, height=4)
    at ../../src/mesa/state_tracker/st_cb_texture.c:778
#3  0x00007fb5798c99d4 in st_CopyTexSubImage (ctx=0x132a2f0, dims=2, texImage=0x13c86b0, destX=0, destY=0, 
    destZ=0, rb=0x1377f10, srcX=0, srcY=0, width=16, height=4)
    at ../../src/mesa/state_tracker/st_cb_texture.c:1115
#4  0x00007fb5798a10d7 in copytexsubimage (ctx=0x132a2f0, dims=2, target=35864, level=0, xoffset=0, 
    yoffset=0, zoffset=0, x=0, y=0, width=16, height=4) at ../../src/mesa/main/teximage.c:3441
#5  0x00007fb5798a1250 in _mesa_CopyTexSubImage2D (target=35864, level=0, xoffset=0, yoffset=0, x=0, y=0, 
    width=16, height=4) at ../../src/mesa/main/teximage.c:3470
#6  0x000000000040232b in test_target_and_format (x=368, y=0, target=35864, format=36013, 
    expected=0x402c70 <fcolor+112>) at piglit/tests/texturing/copyteximage.c:553
#7  0x000000000040295c in piglit_display () at piglit/tests/texturing/copyteximage.c:663
#8  0x00007fb57d40c40c in display ()
    at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:60
#9  0x00007fb57cbbffc4 in fghRedrawWindow (window=0x1234440) at freeglut_main.c:210
#10 fghcbDisplayWindow (window=0x1234440, enumerator=0x7fffc04de320) at freeglut_main.c:227
#11 0x00007fb57cbc3719 in fgEnumWindows (
    enumCallback=enumCallback@entry=0x7fb57cbbff20 <fghcbDisplayWindow>, 
    enumerator=enumerator@entry=0x7fffc04de320) at freeglut_structure.c:394
#12 0x00007fb57cbc045c in fghDisplayAll () at freeglut_main.c:249
#13 glutMainLoopEvent () at freeglut_main.c:1450
#14 0x00007fb57cbc0d81 in glutMainLoop () at freeglut_main.c:1498
#15 0x00007fb57d40c5de in run_test (gl_fw=0x7fb57d6d5820 <glut_fw>, argc=2, argv=0x7fffc04de6d8)
    at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:127
#16 0x00007fb57d40a6fd in piglit_gl_test_run (argc=2, argv=0x7fffc04de6d8, config=0x7fffc04de5c0)
    at piglit/tests/util/piglit-framework-gl.c:127
#17 0x00000000004015d6 in main (argc=3, argv=0x7fffc04de6d8)
    at piglit/tests/texturing/copyteximage.c:122
(gdb) frame 1
#1  0x00007fb579aeafd5 in pipe_put_tile_z (pt=0x151b6d0, dst=0x152aa70, x=0, y=0, w=16, h=1, zSrc=0x13c8060)
    at util/u_tile.c:795
795	      assert(0);
(gdb) l
790	            ptrc += srcStride;
791	         }
792	      }
793	      break;
794	   default:
795	      assert(0);
796	   }
797	}
798	
799	
(gdb) info locals
srcStride = 16
ptrc = 0x13c8060
map = 0x152aa70 "\330\035\032}\265\177"
i = 20458016
j = 0
format = PIPE_FORMAT_Z32_FLOAT_S8X24_UINT
__FUNCTION__ = "pipe_put_tile_z"
Comment 1 Brian Paul 2013-01-04 22:36:15 UTC
Fixed by 073a53fe2f39cfa42090b223cbaf287b48cefe8e


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.